--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
     </div>  
 
 
-    <div class="relative">
-      <div class="w-2 h-2 rounded-full bg-red-500 absolute right-0 top-0.5">
+    <div class="flex space-x-4">
 
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
-        <path fill="#fff"
-          d="m12 21l-1.45-1.3q-2.525-2.275-4.175-3.925T3.75 12.812Q2.775 11.5 2.388 10.4T2 8.15Q2 5.8 3.575 4.225T7.5 2.65q1.3 0 2.475.55T12 4.75q.85-1 2.025-1.55t2.475-.55q2.35 0 3.925 1.575T22 8.15q0 1.15-.388 2.25t-1.362 2.412q-.975 1.313-2.625 2.963T13.45 19.7L12 21Zm0-2.7q2.4-2.15 3.95-3.688t2.45-2.674q.9-1.138 1.25-2.026T20 8.15q0-1.5-1-2.5t-2.5-1q-1.175 0-2.175.662T12.95 7h-1.9q-.375-1.025-1.375-1.688T7.5 4.65q-1.5 0-2.5 1t-1 2.5q0 .875.35 1.763t1.25 2.025q.9 1.137 2.45 2.675T12 18.3Zm0-6.825Z" />
-      </svg>
-    </div>
+      <a href="./white.html"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 1024 1024" class="text-white fill-current hover:text-gray-300"><path d="M118.656 438.656a32 32 0 0 1 0-45.248L416 96l4.48-3.776A32 32 0 0 1 461.248 96l3.712 4.48a32.064 32.064 0 0 1-3.712 40.832L218.56 384H928a32 32 0 1 1 0 64H141.248a32 32 0 0 1-22.592-9.344zM64 608a32 32 0 0 1 32-32h786.752a32 32 0 0 1 22.656 54.592L608 928l-4.48 3.776a32.064 32.064 0 0 1-40.832-49.024L805.632 640H96a32 32 0 0 1-32-32z"/></svg></a>
+  
+      <div class="relative">
+      
+
+          <div class="w-2 h-2 rounded-full bg-red-500 absolute right-0 top-0.5"></div>
+         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" class="text-white fill-current">
+            <path
+              d="m12 21l-1.45-1.3q-2.525-2.275-4.175-3.925T3.75 12.812Q2.775 11.5 2.388 10.4T2 8.15Q2 5.8 3.575 4.225T7.5 2.65q1.3 0 2.475.55T12 4.75q.85-1 2.025-1.55t2.475-.55q2.35 0 3.925 1.575T22 8.15q0 1.15-.388 2.25t-1.362 2.412q-.975 1.313-2.625 2.963T13.45 19.7L12 21Zm0-2.7q2.4-2.15 3.95-3.688t2.45-2.674q.9-1.138 1.25-2.026T20 8.15q0-1.5-1-2.5t-2.5-1q-1.175 0-2.175.662T12.95 7h-1.9q-.375-1.025-1.375-1.688T7.5 4.65q-1.5 0-2.5 1t-1 2.5q0 .875.35 1.763t1.25 2.025q.9 1.137 2.45 2.675T12 18.3Zm0-6.825Z" />
+          </svg>
+        </div>
+  </div>
   </header>
 
   <hr class="border-gray-700">
@@ -54,7 +59,7 @@
       <span class="text-gray-400 text-xs pt-1">Your story</span>
     </div>
 
-    <div class="flex justify-center flex-col items-center hover:cursor-pointer">
+    <div class="flex justify-center flex-col items-center hover:cursor-pointer relative">
       <img src="https://images.news18.com/ibnlive/uploads/2023/01/thalapathy-vijay-2-1-1-167395420716x9.jpg" alt="" class="w-16 h-16 rounded-full object-cover bg-gradient-to-r from-yellow-400 via-red-500 to-purple-500 p-0.5">
     
       <span class="text-gray-200 text-xs  pt-1">Actor_vijay</span>
